[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database-connector"
version = "0.1.0"
description = "Lightweight Python helper library for PostgreSQL connection management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.0,<4.0",
  "mysql-connector-python>=8.0,<9.0",
  "boto3>=1.34,<2.0",
]
authors = [
  {name = "Python Netcode User", email = "tamnn25@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/herestam/database_connector"
Repository = "https://github.com/herestam/database_connector"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["database_connector"]
include = ["database_connector"]
